--- a/views/info.hbs
+++ b/views/info.hbs
@@ -20,6 +20,10 @@
                     <td>{{server.os}}</td>
                 </tr>
                 <tr>
+                    <td>CPUs: </td>
+                    <td>{{server.cpus}}</td>
+                </tr>
+                <tr>
                     <td>Versión de node.js: </td>
                     <td>{{server.nodeVersion}}</td>
                 </tr>
